@@ -48,7 +48,6 @@ public class LogFlusher extends Chore {
     }
   }
 
-  @Override
   protected void chore() {
     synchronized (log) {
       HLog hlog = log.get();
